Minor UI improvement: tweaked widths of columns on the "My projects" page to give the "Issue links" more space to avoid wrapping.

--- a/project_issue.css
+++ b/project_issue.css
@@ -1,4 +1,4 @@
-/* $Id: project_issue.css,v 1.10 2007-01-05 00:21:08 dww Exp $ */
+/* $Id: project_issue.css,v 1.11 2007-07-31 05:54:55 dww Exp $ */
 /* $Name:  $ */
 
 /* Viewing issue nodes */
@@ -43,17 +43,17 @@ table.projects {
   width: 100%;
 }
 table.projects .project-name {
-  width: 25%;
+  width: 22%;
 }
 table.projects .project-issue-updated {
-  width: 14%;
+  width: 12%;
 }
 table.projects .project-issues {
-  width: 8%;
+  width: 9%;
   text-align: right;
 }
 table.projects .project-issue-links {
-  width: 20%;
+  width: 24%;
   padding-left: 0.8em;
 }
 table.projects .project-project-updated {
